Fix scrollable funnel visibility

--- a/frontend/src/scenes/funnels/FunnelBarChart/FunnelBarChart.scss
+++ b/frontend/src/scenes/funnels/FunnelBarChart/FunnelBarChart.scss
@@ -4,8 +4,6 @@
     position: relative;
     width: 100%;
     height: 26rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
     overflow: hidden;
     .InsightCard & {
         height: 100%;
@@ -14,6 +12,7 @@
     table {
         --bar-width: 0.5rem; // This should be overriden from React
         --bar-row-height: 18rem;
+        margin: 0 1rem;
         width: 100%;
         > tbody {
             > tr {
